bring as much as possible from the OneHop branch

--- a/simulations/default.ini
+++ b/simulations/default.ini
@@ -4,7 +4,7 @@
 #debug-on-errors = true
 #record-eventlog = true
 
-ned-path = .;../src;../../inetmanet-2.0/src;../src;../../Oversim-20121206/src
+ned-path = ../../Oversim-20121206/src;.;../src;../../inetmanet-2.0/src;../src
 
 sim-time-limit = 60min
 simtime-scale=-9
@@ -88,6 +88,29 @@ cmdenv-express-mode = true
 **.bootstrapList.mergeOverlayPartitions = false
 **.bootstrapList.maintainList = false
 
+#OneHopOverlaer4MANET settings
+**.overlay*.onehopoverlay4manet.lookupRedundantNodes = 3
+**.overlay*.onehopoverlay4manet.lookupParallelPaths = 1
+**.overlay*.onehopoverlay4manet.lookupParallelRpcs = 1
+**.overlay*.onehopoverlay4manet.lookupMerge = true
+**.overlay*.onehopoverlay4manet.routingType = "iterative"
+**.overlay*.onehopoverlay4manet.joinRetry = 2
+**.overlay*.onehopoverlay4manet.joinDelay = 10s
+**.overlay*.onehopoverlay4manet.stabilizeDelay = 20s
+**.overlay*.onehopoverlay4manet.stabilizeEstimation = true
+**.overlay*.onehopoverlay4manet.stabilizeEstimateMuliplier = 0.5
+**.overlay*.onehopoverlay4manet.cacheFlushDelay = 20s
+**.overlay*.onehopoverlay4manet.cacheCheckMultiplier = 3
+**.overlay*.onehopoverlay4manet.cacheTTL = 120s
+**.overlay*.onehopoverlay4manet.successorListSize = 4
+**.overlay*.onehopoverlay4manet.cacheSize = 50
+**.overlay*.onehopoverlay4manet.nodesPerSlice = 2
+**.overlay*.onehopoverlay4manet.cacheUpdateDelta = 0.5
+**.overlay*.onehopoverlay4manet.activePropagation = true
+**.overlay*.onehopoverlay4manet.sendFalseNegWarnings = true
+**.overlay*.onehopoverlay4manet.fibonacci = false
+
+
 #EpiChord settings
 **.overlay*.epichord.lookupRedundantNodes = 3
 **.overlay*.epichord.lookupParallelPaths = 1
@@ -108,6 +131,7 @@ cmdenv-express-mode = true
 **.overlay*.epichord.activePropagation = true
 **.overlay*.epichord.sendFalseNegWarnings = true
 **.overlay*.epichord.fibonacci = false
+
 
 # Chord settings
 **.overlay*.chord.joinRetry = 5
