--- a/simulations/omnetpp.ini
+++ b/simulations/omnetpp.ini
@@ -146,6 +146,146 @@ network = Scenario
 **.transitionTime = 100s
 **.measurementTime = 500s
 
+[Config OneHopOverlay4MANET]
+record-eventlog = false
+sim-time-limit = 60min #note: see oversim-specific parameters "transition-time" / "measurement time"
+description = "OneHopOverlay4MANET over OLSR"
+network = Scenario
+
+*.hosts = 15
+
+**.constraintAreaMinX = 0m
+**.constraintAreaMinY = 0m
+**.constraintAreaMinZ = 0m
+**.constraintAreaMaxX = 2000m
+**.constraintAreaMaxY = 2000m
+**.constraintAreaMaxZ = 0m
+
+**.neighborCache.debugOutput = true
+**.onehopoverlay4manet.overlayId = 0
+
+# mobility
+**.host*.mobilityType = "StationaryMobility"
+**.host*.mobility.initFromDisplayString = false
+
+**.host*.ac_wlan.interfaces = "wlan0"
+
+#overlay
+**.overlayType = "p2psipmanet.ManetOneHopOverlay4MANETModules"
+
+#tiers
+**.tier1Type = "oversim.applications.kbrtestapp.KBRTestAppModules"
+**.tier1*.kbrTestApp.testMsgInterval = 10s
+**.tier1*.kbrTestApp.kbrOneWayTest = false
+**.tier1*.kbrTestApp.kbrRpcTest = false
+**.tier1*.kbrTestApp.kbrLookupTest = true
+**.tier2Type = "oversim.common.TierDummy"
+**.tier3Type = "oversim.common.TierDummy"
+
+**.numTiers = 1
+
+**.tier3.debugOutput = false
+**.tier2.debugOutput = false
+
+**.overlay*.onehopoverlay4manet.lookupRedundantNodes = 3
+**.overlay*.onehopoverlay4manet.lookupParallelPaths = 1
+**.overlay*.onehopoverlay4manet.lookupParallelRpcs = 1
+**.overlay*.onehopoverlay4manet.lookupMerge = true
+**.overlay*.onehopoverlay4manet.routingType = "iterative"
+**.overlay*.onehopoverlay4manet.joinRetry = 2
+**.overlay*.onehopoverlay4manet.joinDelay = 10s
+**.overlay*.onehopoverlay4manet.stabilizeDelay = 20s
+**.overlay*.onehopoverlay4manet.stabilizeEstimation = true
+**.overlay*.onehopoverlay4manet.stabilizeEstimateMuliplier = 0.5
+**.overlay*.onehopoverlay4manet.cacheFlushDelay = 120s
+**.overlay*.onehopoverlay4manet.cacheCheckMultiplier = 3
+**.overlay*.onehopoverlay4manet.cacheTTL = 120s
+**.overlay*.onehopoverlay4manet.successorListSize = 4
+**.overlay*.onehopoverlay4manet.nodesPerSlice = 2 #not used anymore
+**.overlay*.onehopoverlay4manet.cacheUpdateDelta = 0.5
+**.overlay*.onehopoverlay4manet.activePropagation = true
+**.overlay*.onehopoverlay4manet.sendFalseNegWarnings = true
+**.overlay*.onehopoverlay4manet.fibonacci = false
+
+#OLSR manet routing
+
+**.vector-recording = true
+**.scalar-recording = true
+
+**.terminalTypes= "p2psipmanet.Host"
+*.underlayConfigurator.churnGeneratorTypes = "p2psipmanet.ZeroChurn"
+**.transitionTime = 20s
+**.measurementTime = 280s
+
+[Config OneHopDHTOverMANET_Stationary]
+#debug-on-errors = true
+record-eventlog = false
+sim-time-limit = 60min #note: see oversim-specific parameters "transition-time" / "measurement time"
+description = "OneHop DHT over MANET - no mobility"
+network = Scenario
+
+*.hosts = 10
+
+**.constraintAreaMinX = 0m
+**.constraintAreaMinY = 0m
+**.constraintAreaMinZ = 0m
+**.constraintAreaMaxX = 2000m
+**.constraintAreaMaxY = 2000m
+**.constraintAreaMaxZ = 0m
+
+**.neighborCache.debugOutput = true
+**.onehopoverlay4manet.overlayId = 0
+
+# mobility
+**.host*.mobilityType = "StationaryMobility"
+**.host*.mobility.initFromDisplayString = false
+
+**.host*.ac_wlan.interfaces = "wlan0"
+
+#overlay
+**.overlayType = "p2psipmanet.ManetOneHopOverlay4MANETModules"
+**.overlay*.onehopoverlay4manet.lookupRedundantNodes = 3
+**.overlay*.onehopoverlay4manet.lookupParallelPaths = 1
+**.overlay*.onehopoverlay4manet.lookupParallelRpcs = 1
+**.overlay*.onehopoverlay4manet.lookupMerge = true
+**.overlay*.onehopoverlay4manet.routingType = "iterative"
+**.overlay*.onehopoverlay4manet.joinRetry = 2
+**.overlay*.onehopoverlay4manet.joinDelay = 10s
+**.overlay*.onehopoverlay4manet.stabilizeDelay = 20s
+**.overlay*.onehopoverlay4manet.stabilizeEstimation = true
+**.overlay*.onehopoverlay4manet.stabilizeEstimateMuliplier = 0.5
+**.overlay*.onehopoverlay4manet.cacheFlushDelay = 120s
+**.overlay*.onehopoverlay4manet.cacheCheckMultiplier = 3
+**.overlay*.onehopoverlay4manet.cacheTTL = 120s
+**.overlay*.onehopoverlay4manet.successorListSize = 4
+**.overlay*.onehopoverlay4manet.nodesPerSlice = 2 #not used anymore
+**.overlay*.onehopoverlay4manet.cacheUpdateDelta = 0.5
+**.overlay*.onehopoverlay4manet.activePropagation = true
+**.overlay*.onehopoverlay4manet.sendFalseNegWarnings = true
+**.overlay*.onehopoverlay4manet.fibonacci = false
+
+#tiers
+**.tier1Type = "oversim.applications.dht.DHTModules"
+**.tier2Type = "oversim.tier2.dhttestapp.DHTTestAppModules"
+**.tier3Type = "oversim.common.TierDummy"
+
+**.numTiers = 2
+**.dht.numReplica = 4
+
+**.tier3.debugOutput = true
+#**.tier2.debugOutput = true
+
+**.globalObserver.globalFunctions[0].functionType = "oversim.tier2.dhttestapp.GlobalDhtTestMap"
+**.globalObserver.numGlobalFunctions = 1
+#OLSR manet routing
+
+**.vector-recording = true
+**.scalar-recording = true
+
+**.terminalTypes= "p2psipmanet.Host"
+**.churnGeneratorTypes = "p2psipmanet.ZeroChurn" # a list of churn generators to be used
+**.transitionTime = 20s
+**.measurementTime = 280s
 
 [Config EpiChordOverOLSR]
 record-eventlog = false
