--- a/simulations/attacks.ini
+++ b/simulations/attacks.ini
@@ -70,6 +70,30 @@ network = Scenario
 # Overlay Layer Attacks #
 #########################
 
+[Config CustomAttackOverOneHopOverlay4MANET]
+description = "OneHopOverlay4MANET over OLSR - no mobility - Custom Attack"
+**.overlayType = "p2psipmanet.ManetOneHopOverlay4MANETModules"
+**.overlayId = 0
+**.overlay*.onehopoverlay4manet.lookupRedundantNodes = 3
+**.overlay*.onehopoverlay4manet.lookupParallelPaths = 1
+**.overlay*.onehopoverlay4manet.lookupParallelRpcs = 1
+**.overlay*.onehopoverlay4manet.lookupMerge = true
+**.overlay*.onehopoverlay4manet.routingType = "iterative"
+**.overlay*.onehopoverlay4manet.joinRetry = 2
+**.overlay*.onehopoverlay4manet.joinDelay = 10s
+**.overlay*.onehopoverlay4manet.stabilizeDelay = 20s
+**.overlay*.onehopoverlay4manet.stabilizeEstimation = true
+**.overlay*.onehopoverlay4manet.stabilizeEstimateMuliplier = 0.5
+**.overlay*.onehopoverlay4manet.cacheFlushDelay = 120s
+**.overlay*.onehopoverlay4manet.cacheCheckMultiplier = 3
+**.overlay*.onehopoverlay4manet.cacheTTL = 120s
+**.overlay*.onehopoverlay4manet.successorListSize = 4
+**.overlay*.onehopoverlay4manet.nodesPerSlice = 2 #not used anymore
+**.overlay*.onehopoverlay4manet.cacheUpdateDelta = 0.5
+**.overlay*.onehopoverlay4manet.activePropagation = true
+**.overlay*.onehopoverlay4manet.sendFalseNegWarnings = true
+**.overlay*.onehopoverlay4manet.fibonacci = false
+
 [Config CustomAttack]
 description = "Chord over MANET - no mobility - Custom Attack"
 
